<resources>
    <string name="app_name">Perfil de Estudiante</string>

    <string name="label_nombre">Nombre</string>
    <string name="hint_nombre">Ej. Juan Perez</string>
    <string name="label_matricula">Matrícula</string>
    <string name="hint_matricula">Ej. 2024-8945</string>
    <string name="label_carrera">Carrera</string>
    <string name="carrera_placeholder">Selecciona tu carrera</string>
    <string name="btn_guardar">Guardar</string>
    <string name="btn_editar">Editar</string>

    <string name="error_nombre">El nombre es obligatorio</string>
    <string name="error_matricula">La matrícula es obligatoria</string>
    <string name="error_matricula_formato">La matrícula debe tener 8 dígitos (0000-0000)</string>
    <string name="error_carrera">La carrera es obligatoria</string>

    <string name="saludo">¡Hola, %1$s!</string>
    <string name="resumen_intro">Aquí está tu información:</string>
    <string name="resumen_nombre">Nombre:</string>
    <string name="resumen_matricula">Matrícula:</string>
    <string name="resumen_carrera">Carrera:</string>
    <string name="toast_guardado">Perfil guardado correctamente</string>

    <string-array name="carreras">
        <item>Selecciona tu carrera</item>
        <item>Ingeniería en Ciencias de la Computación</item>
        <item>Ingeniería Civil</item>
        <item>Ingeniería Industrial</item>
        <item>Ingeniería Eléctrica</item>
        <item>Ingeniería Electrónica</item>
        <item>Ingeniería Mecánica</item>
        <item>Ingeniería Telemática</item>
    </string-array>
</resources>
